--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "res-report-app",
   "version": "0.1.0",
+  "main":"index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
