--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "res-report-app",
   "version": "0.1.0",
-  "main":"index.js",
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
