--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "res-report-app",
   "version": "0.1.0",
   "main": "index.js",
+  "license": "UNLICENSED",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
